# base-images

./: .gitignore  Pipfile  README.md  pyproject.toml
.cursor/plans/: svg_asset_generator_89a40438.plan.md
.devcontainer/: Dockerfile  devcontainer.json
configs/: default-assets.json  default-assets.jsonc
src/base_images/: __init__.py  __main__.py  config.py  debug_server.py  generator.py  templates.py
tests/: test_config.py  test_debug_server.py  test_generation.py  test_templates.py
