[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "base-images"
version = "0.1.0"
description = "Generate favicon, app icon, and social preview image assets from SVG files."
requires-python = ">=3.12"
dependencies = [
  "pillow",
  "playwright",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
